--- a/data/build.gradle
+++ b/data/build.gradle
@@ -19,6 +19,13 @@ android {
         consumerProguardFiles "consumer-rules.pro"
         buildConfigField("java.lang.String","API_KEY",'"6eAMOkuxjdnG1lU1GgoAE8vOS4k77E0j"')
         buildConfigField("java.lang.String","BASE_URL",'"https://api.nytimes.com/svc/movies/v2/"')
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
+            }
+        }
     }
 
     buildTypes {
@@ -37,6 +44,7 @@ android {
     lintOptions {
         abortOnError false
     }
+
 }
 
 dependencies {
