[MOVRE-06] : add - Pagin Library integrated

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:2.6.0'
 
 
-    implementation("androidx.paging:paging-runtime-ktx:3.0.1")
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
 
 }
