--- a/data/build.gradle
+++ b/data/build.gradle
@@ -85,4 +85,6 @@ dependencies {
 
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
+    testImplementation "io.mockk:mockk:1.12.0"
+    testImplementation "io.kotlintest:kotlintest:2.0.7"
 }
